UNRELEASED
 * Support EXPORT_WINDOWID, like what xterm and rxvt do.
   Thanks to Peter Bui <peter DOT j DOT bui AT gmail DOT com>
 * New COLOR_STYLE option: SOLARIZED_DARK and SOLARIZED_LIGHT, closes #8.
 * Fix COLOR_STYLE data according to xterm-279 and linux console in qemu
 * Workaround for Caps lock problem by changing hotkey settings, issue #7.

0.5.1
 * Better compatibility with some compilers and CFLAGS
   Thanks to Daniel Richard G. <skunk AT iSKUNK DOT ORG>
 * Support key bindings for ALT_SHIFT, CTRL_ALT_SHIFT, and CTRL_SHIFT
 * Auto-detect gtk_*_resize_grip in dlopen() mode
 * Fix a potential bug for HOTKEY_SCROLL_ONE_PAGE_*
 * Strict minimum font size to 1
 * Hide DEFAULT_ENCODING, PROGRAM_NAME, and PROGRAM_VERSION
 * Make everything GTK+ 3.4.0 compatible

0.5.1~pre3
 * New hotkey definition method, support ALT and SHIFT, closes #2.
   The new behavior breaks old hotkey definitions.
   If you have old conffiles, please update them to latest format.
 * Support TAB_NEW_PATH_EQUAL_OLD when open new evilvte window, closes #3.
 * Support HOTKEY_SCROLL_ONE_PAGE_*, closes #4.
 * Some distributions backports gtk_*_resize_grip to GTK+ 2.x.
   Try export CFLAGS="-DGTK_HAS_RESIZE_GRIP" and rebuild evilvte
 * Drop old CTRL_ALT option
 * Deprecate HOTKEY_TAB_GO_TO_NUMBER, use ALT_NUMBER_GO_TO_TAB_NUMBER or
   CTRL_NUMBER_GO_TO_TAB_NUMBER instead

0.5.1~pre2
 * Support TAB_NEW_TAB_AT_TAB_ONE, let new tab always be the first tab
   Thanks to shenfeng <https://github.com/shenfeng>
 * Make close button smaller
 * Improve resizing behavior with "-VteTerminal-inner-border" property

0.5.1~pre1

 * Temporary workaround for "-VteTerminal-inner-border" property
 * Mouse clicking can also turn off urgency hint now

0.5.0

 The "One binary to rule them all!" Release

 * Fix a bug for -e option
 * Fix a bug for input method menu
 * New configure option: --with-gtk=2+3|3+2
   The binary will not link to VTE nor GTK+, thus can support GTK+ 2.x and 3.x