@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1,SHA512
 
-29b9d23a23cbe50875955fe63d1e42429ecb9afc  16029 ChangeLog
+104ce50d7e5275c4d58fc426b275c37604a045e6  16202 ChangeLog
 1c2d983c7261aac7f3acb847892b9600de8c4307   2889 Makefile
 7103c2ecddea29134185e30fbf7ba2daf3f11c08  10264 configure
 4cc77b90af91e615a64ae04893fdffa7939db84c  18092 gpl-2.0.txt
@@ -16,28 +16,28 @@ ae38a2198cce1af62832132fe7afada23f68e490   1258 misc/36.png
 eae1b0fb4deb0adbed4237bfbf7cea7022efa909   2373 misc/64.png
 2ed6879f871e1604c17724a6906b5307bc893313   2853 misc/72.png
 18ad6f262b972382789e2c811bd34a6f984adeca   3033 misc/96.png
-0a23169107aaa7cd45541422bbfa8b67357e4364   1426 misc/evilvte.desktop
+edd3909afc7ea08a5108aa2b26425f01596eca52   1433 misc/evilvte.desktop
 45cf02d4da29acd0388cd19527a58dd123f44586  15284 misc/evilvte.svg
 83055c532a24e778aabd9b5aa86cf9ee3d1f17a9    353 misc/evilvte.xml
-c5ccf87f60b8039f34e8914edd866cce5564a3e4   1707 misc/manpage.1
+299e5764800d97fb4d4a7436eee21bb32958f105   1882 misc/manpage.1
 a83357473eb7c431a9f8e2813e02553d5ffa54b7    338 misc/showvte.1
-3dac307e09c35ec039682d9c8bc176567bf04ce0  11050 src/config.h
-4146347cd357dc0604a975ae1790d915a5060172 165419 src/evilvte.c
-165ba6dfab07c1c824277184f97383e26fa7799a  15631 src/process.sh
+1379dd12c40479281410f977e71ab1961e32180d  11293 src/config.h
+23ae49b884cafe5848a50a272c358724933dae64 167239 src/evilvte.c
+838b43b5274c2e7f173aeb0d6b24aea85913e79d  16438 src/process.sh
 -----BEGIN PGP SIGNATURE-----
 
-iEYEARECAAYFAk+82yQACgkQdEpXpumNYVl2vgCfQL5EnPmlPBkJ8wZuSM/eWoEr
-g+EAn1/i+P9jLTfo6rzfml5Knk8vwle+iQIcBAEBCgAGBQJPvNskAAoJELc3H0m+
-i6gZYZUP/A4SHDvCSt63KNyQSI3Hok85tqjcC4WqKTgZOOALJbEc2AQjQafaKT4R
-Nwdo+u28f6ASrnEblp5z8RKM60RKohGP99dnfoNPrQeHCY0MfP1+memLYHSmiQRL
-UoqTIgJbNWvnnFi0xZy8P8WxkDiju8YZFaD5cBu0OT+Di2NnIg22NMvNz3Yly0m7
-ekFOpxwzC8550fBdKQAjpBWgAKIoU0TEo81f4+EOKo7z7Y6sP/8ga605lm5pHuGh
-+qI0I2XiUG6m3tTdJJlnjQxwOHJkqBDu6Qj/5PiJE7FWAvL+y7YzH7BksN4SJQqC
-wt24fuMqEwptEObE9Uq+Xc3d4H4Hs+YnLU3+509cCBqIA2FOlVdPDM1mRMFA8hiR
-FFV5/cmiii2Zmx5Qq4Ej5/rDlKKUQFsT+tuxXyc4w6KqeHdA3o1WdND9QmPnRVt+
-qCTaTPRMqIQgdvhftFPzUfxI/C2eFUO9pSCQFCYIfvyvmhbOMwMWLIDXGnX5zSLe
-diMaWWJhwdlFYAXN2Ll3xvlHsmFiWz7BZv9YVSxccc1oXlNUqO3x+EpnczrmOAqN
-FEu38XU12Ku5NarHcAYcJ1LepcmrdEYlKjkV+sfGIo5M8HLORC0HhCVuDYGaCE7O
-h5lia+ZP/mZjIQE63N2q1MU4r2Q9K0F4YKYRP8PI2tmV+ug6xeCD
-=0F0Z
+iEYEARECAAYFAk/+Q7gACgkQdEpXpumNYVnoVACfW12VjieWYCban0gtXrInAmUP
+EG4AoIj0/EhnLr7i/9uA68ZsSRlSpANgiQIcBAEBCgAGBQJP/kO4AAoJELc3H0m+
+i6gZRgkP/A0A9h/qZ8AdxnJ0dMj/LDjHW3golZ9Il2Op5W/hUNllF+yvBMPMJ+Sr
+iQnLpPD0aCmwLQysDyupXGBg79zb6Wwmz9bSMo1t36Cu+IBJbPCgGmQhPjvAHZDb
+aSUa34sq3HxemHLJDZ7Yhe3zgaee7OIjO64va3Qde9/GGZYbrikwJDVO5U3avnuI
+hIz/eLOC/csY/NgJjWX43aszxrpddw/bwIdiwP2C4/JqgpBXQ/G/+lipfBv1qHU6
+YdZIE8o1feoJtVNP7aYyMK0XTD7iLyaiHAJjWndbomQL3h0U65G/41Pgjc7Ny66j
+aD0hM2VD3KEyVx1W3Y6jjU/gjmqexGDDzbDPVDdx9KXfMNdBTHIsjVcVsiH8qVdg
+xjlQoxsZgiRQUQ31iZQQNUPbuC0eNv5vyTTeMwU9ZTMGxBUtiX0Q0x5pO+QlUrZd
+9Cqs8RBrW0oW2cu9orZ/JHJI3Ert8MY/SbbePEnxFl1Deo8/yR3c3jCohMyA84SR
+d/Xrn0LojTmCfxrS8xeHdeePzKIhxe9wW3ZES8MCfVThjhc9rZDll0yaxBNaqCeR
+CW+w8yUs9NPMrB9nJxfui5WIrD/oLL0M7tOxBC2PZARkuCtQcM+WQriswugCZZ1X
+kUYHV8hciQJeQx18//M6dt1GEoP99gpcifdPiJ4GkO44IKVgwi4g
+=v5lj
 -----END PGP SIGNATURE-----
