@@ -20,6 +20,15 @@ is a terminal emulator. It supports almost everything VTE provides. It also supp
 .\" F .TP
 .\" F .B \-f
 .\" F Start evilvte in fullscreen mode.
+.\" 3 .TP
+.\" 3 .B \-fg
+.\" 3 Specify foreground color
+.\" 4 .TP
+.\" 4 .B \-bg
+.\" 4 Specify background color
+.\" 5 .TP
+.\" 5 .B \-sa
+.\" 5 Specify saturation level in [0, 1]
 .\" 7 .TP
 .\" 7 .B \-fn \[dq][font] [size]\[dq]
 .\" 7 Specify font and font size.
