@@ -1,6 +1,9 @@
 UNRELEASED
+ * Support command line options: -fg, -bg, -sa
+   Thanks to Globe Trotter <itsme_410 AT yahoo DOT com>
  * Support EXPORT_WINDOWID, like what xterm and rxvt do.
    Thanks to Peter Bui <peter DOT j DOT bui AT gmail DOT com>
+ * Improve desktop file, thanks to adaptee <adaptee AT gmail DOT com>
  * New COLOR_STYLE option: SOLARIZED_DARK and SOLARIZED_LIGHT, closes #8.
  * Fix COLOR_STYLE data according to xterm-279 and linux console in qemu
  * Workaround for Caps lock problem by changing hotkey settings, issue #7.
